# general_repo

./: README.MD
app/: pyproject.toml
app/rest_service/: endpoints.py
app/rest_service/application/: use_cases.py
app/rest_service/controller/: dto.py
app/rest_service/core/: entities.py
app/rest_service/infrastructure/db_repositories/: cat_toy_repostiroy.py  models.py
