[tool.poetry]
name = "rest_service"
version = "0.1.0"
description = ""
authors = ["szuro <szuroveczdavid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"
ruff = "^0.0.291"
pre-commit = "^3.4.0"
fastapi = "^0.103.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true